# SolarEclipseWorkbench

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml  test_exposure_calculator.py  test_full_partial_generation.py  test_full_script_output.txt  test_geocoding.py  test_partial_phase_generation.py  test_realistic_shutters.py  test_script_integration.py
docs/: GPS_PHONE.md  WIZARD_GUIDE.md
scripts/: get_gps_location.py
src/solareclipseworkbench/: __init__.py  besselian_element_generator.py  camera.py  constants.py  deltat.csv  exposure_calculator.py  gui.py  location_ui.py  notifications.py  phone_gps.py  reference_moments.py  scripts.py  sew.py  solar_eclipse.py  usb_gps.py  utils.py  wizard.py
src/solareclipseworkbench/example_scripts/: eclipse_contact_example.py  testSony.txt  testVirtualCamera.txt  voice_prompts_basic.txt
tests/: eclipse_contact_example.py  test_solar_eclipse.py
